--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s --pkg ./packages/gantt/package.json",
     "contributors:init": "all-contributors init",
     "contributors:add": "all-contributors add",
-    "contributors:generate": "all-contributors generate",
-    "postinstall": "husky install"
+    "contributors:generate": "all-contributors generate"
   },
   "dependencies": {
     "@angular/animations": "^18.2.0",
