--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s --pkg ./packages/gantt/package.json",
     "contributors:init": "all-contributors init",
     "contributors:add": "all-contributors add",
-    "contributors:generate": "all-contributors generate"
+    "contributors:generate": "all-contributors generate",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "@angular/animations": "^18.2.0",
